fix dialog out of bounds in lite

--- a/src/styles/lite/scss/modal.scss
+++ b/src/styles/lite/scss/modal.scss
@@ -23,6 +23,9 @@
   outline: 0;
   border-radius: 5px;
   @include box-shadow(0 3px 9px rgba(0,0,0,.5));
+  max-height: calc(100vh - 60px);
+  max-height: stretch;  
+  overflow-y: auto;
 }
 
 .note-modal-header {
